# drone_monitor

./: README.md  note
gcopter/: CMakeLists.txt  package.xml
gcopter/config/: global_planning.rviz  global_planning.yaml
gcopter/debug/: bls.cpp  example_code.cpp
gcopter/include/gcopter/: firi.hpp  flatness.hpp  gcopter.hpp  geo_utils.hpp  lbfgs.hpp  minco.hpp  quickhull.hpp  root_finder.hpp  sdlp.hpp  sfc_gen.hpp  trajectory.hpp  voxel_dilater.hpp  voxel_map.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/install/: local_setup.sh  setup.sh
gcopter/install/gcopter/lib/gcopter/: bls
gcopter/install/gcopter/share/ament_index/resource_index/parent_prefix_path/: gcopter
gcopter/install/gcopter/share/gcopter/: local_setup.sh  package.bash  package.sh
gcopter/install/gcopter/share/gcopter/environment/: ament_prefix_path.sh  path.sh
gcopter/install/gcopter/share/gcopter/launch/: global_planning.launch
gcopter/launch/: global_planning.launch
gcopter/log/: latest_build
gcopter/src/: global_planning.cpp
install/: local_setup.sh  setup.sh
install/gcopter/share/gcopter/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
install/gcopter/share/gcopter/cmake/: gcopterConfig.cmake
install/map_sensing/lib/map_sensing/: map_sensing_node
install/map_sensing/share/map_sensing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/map_sensing/share/map_sensing/launch/: sensing.launch
install/mockamap/lib/mockamap/: mockamap_node
install/mockamap/share/ament_index/resource_index/parent_prefix_path/: mockamap
install/mockamap/share/mockamap/: package.sh
install/mockamap/share/mockamap/launch/: mockamap.launch
install/simulation/lib/simulation/: simulation_node
install/simulation/share/ament_index/resource_index/parent_prefix_path/: simulation
install/simulation/share/simulation/: package.sh  package.xml
log/: latest_build
map_gen/map_sensing/: CMakeLists.txt
map_gen/map_sensing/src/: forest_sensing.cpp
map_gen/mockamap/: CMakeLists.txt  package.xml
map_gen/mockamap/include/: mazepoint.hpp
map_gen/mockamap/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
map_gen/mockamap/install/mockamap/lib/mockamap/: mockamap_node
map_gen/mockamap/install/mockamap/lib/mockamap/launch/: mockamap.launch
map_gen/mockamap/install/mockamap/share/mockamap/: local_setup.dsv  package.sh
map_gen/mockamap/install/mockamap/share/mockamap/launch/: mockamap.launch
map_gen/mockamap/log/: latest_build
map_gen/mockamap/src/: mockamap.cpp
my_launch/launch/: DRONE_planner.rviz  MINCO_planner.rviz  drone.launch  joint.launch  launch.py  module.launch
simulation/: CMakeLists.txt
simulation/include/simulation/: crane_flatness.hpp  mico.hpp  modular.hpp  path_gen.hpp
simulation/src/: fake_module.cpp
storage/gcopter_s/config/: global_planning.yaml
storage/gcopter_s/launch/: global_planning.launch
storage/include/misc/: visualizer.hpp
storage/launch/: global_planning.launch
storage/map_gen_s/: package.xml
storage/map_gen_s/include/: maps.hpp
storage/map_gen_s/src/: mockamap.cpp
template/: CMAKE_example
